@@ -12,7 +12,7 @@ from waflib.extras import autowaf
 # major increment <=> incompatible changes
 # minor increment <=> compatible changes (additions)
 # micro increment <=> no interface changes
-LILV_VERSION       = '0.24.10'
+LILV_VERSION       = '0.24.11'
 LILV_MAJOR_VERSION = '0'
 
 # Mandatory waf variables
